--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "pnpm --filter 0-base dev"
+    "dev0": "pnpm --filter 0 dev",
+    "dev1": "pnpm --filter 1 dev"
   },
   "keywords": [],
   "author": "",
