--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "dev0": "pnpm --filter 0 dev",
-    "dev1": "pnpm --filter 1 dev"
+    "dev1": "pnpm --filter 1 dev",
+    "dev2": "pnpm --filter 2 dev"
   },
   "keywords": [],
   "author": "",
